Make node-sass a peer dependency and support higher versions

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/hankmccoy/sass-to-js-var-loader/issues"
   },
   "homepage": "https://github.com/hankmccoy/sass-to-js-var-loader#readme",
-  "dependencies": {
-    "node-sass": "^3.4.1"
+  "peerDependencies": {
+    "node-sass": ">=3.4.1"
   }
 }
