--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/buildingconnected/sass-to-js-var-loader#readme",
   "peerDependencies": {
-    "node-sass": ">=3.4.1"
+    "sass": ">=1.32.12"
   }
 }
